overflow fix 9

--- a/css/index.css
+++ b/css/index.css
@@ -264,7 +264,6 @@ body {
 @media screen and (max-width: 600px) {
 	.contactbox {
 		overflow-x: scroll;
-		overflow-y: hidden;
 		white-space: nowrap;
 	}
 
@@ -320,7 +319,7 @@ body {
 		height: 9vh;
 		width: 16vw;
 		font-size: 1.2em;
-		transform: translate(69vw);
+		transform: translate(68vw);
 	}
 	.sponsers img{
 		width: 100vw;
